# home-dashboard

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  aggregator.py  kill_switch.py  main.py  mocks.py  settings.py  sse.py
app/static/: dashboard.css  dashboard.js  index.html
docker/: docker-compose.snippet.yml
tests/: conftest.py  test_aggregator.py  test_api.py  test_kill_switch.py  test_sse.py
